--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,29 +5,36 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:local="clr-namespace:WpfApp1"
 		mc:Ignorable="d"
-		Title="MainWindow" Height="600" Width="800">
+		Title="MainWindow" Height="600" Width="800" MinHeight="600" MinWidth="800">
 
-    <Grid x:Name="generalGrid">
-        <Grid.ColumnDefinitions>
+	<Grid x:Name="generalGrid">
+		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="1.75*"></ColumnDefinition>
 			<ColumnDefinition Width="*"></ColumnDefinition>
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
-			<RowDefinition></RowDefinition>
-			<RowDefinition></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+			<RowDefinition Height="0.25*"></RowDefinition>
 		</Grid.RowDefinitions>
 		
-        <!--Игровая зона-->
-        <UniformGrid x:Name="gameGrid" Grid.RowSpan="2"/>
+		<!--Игровая зона-->
+        <UniformGrid x:Name="gameGrid" Grid.RowSpan="2" Margin="10"/>
 
-        <!--Правое доп. меню-->
-        <GroupBox Grid.Column="1" Header="Игровое поле" Margin="10" Padding="5">
-            <StackPanel>
-                <local:MyRadioBtn Checked="RadioBtn_Checked" InfoAboutGameRows="3" InfoAboutGameColumns="3" IsChecked="True">3x3</local:MyRadioBtn>
-                <local:MyRadioBtn Checked="RadioBtn_Checked" InfoAboutGameRows="4" InfoAboutGameColumns="4">4x4</local:MyRadioBtn>
-                <local:MyRadioBtn Checked="RadioBtn_Checked" InfoAboutGameRows="4" InfoAboutGameColumns="5">4x5</local:MyRadioBtn>
-            </StackPanel>
-        </GroupBox>
-		
+        <!--Правое меню-->
+		<GroupBox Grid.Column="1" Header="Игровое поле" Margin="10" Padding="5">
+			<StackPanel>
+				<local:MyRadioBtn Checked="RadioBtn_Checked" InfoAboutGameRows="3" InfoAboutGameColumns="3" IsChecked="True">3x3</local:MyRadioBtn>
+				<local:MyRadioBtn Checked="RadioBtn_Checked" InfoAboutGameRows="4" InfoAboutGameColumns="4">4x4</local:MyRadioBtn>
+				<local:MyRadioBtn Checked="RadioBtn_Checked" InfoAboutGameRows="4" InfoAboutGameColumns="5">4x5</local:MyRadioBtn>
+			</StackPanel>
+		</GroupBox>
+
+        <!-- Нижнее меню -->
+        <DockPanel Grid.Column="0" Grid.Row="3" LastChildFill="False">
+            <Button x:Name="start" DockPanel.Dock="Left" Margin="10" Padding="7" Width="200">Начать игру</Button>
+            <Button x:Name="confirm" DockPanel.Dock="Left" Margin="10" Padding="7">Подтвердить выбор</Button>
+            <Button x:Name="cancel" DockPanel.Dock="Right" Margin="10" Padding="7">Отменить выбор</Button>
+        </DockPanel>
 	</Grid>
 </Window>
